[project]
name = "wapy"
version = "0.5.0"
description = "WhatsApp Cloud API Pydantic Models"
authors = [
    { name = "Isaac Sánchez", email = "isaac@elrincondelsanchez.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "mypy",
    "ruff",
    "boto3",
    "faker",
    "pytest",
    "devtools",
    "boto3-stubs[s3,socialmessaging]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
